--- a/app/src/main/res/layout/im_left.xml
+++ b/app/src/main/res/layout/im_left.xml
@@ -5,14 +5,15 @@
     android:gravity="left|center_vertical"
     android:orientation="horizontal">
 
-    <ImageView
+    <de.hdodenhof.circleimageview.CircleImageView
+        android:id="@+id/icon"
         android:layout_width="50dip"
         android:layout_height="50dip"
         android:layout_marginLeft="10dip"
         android:src="@drawable/assistant" />
 
     <TextView
-        android:id="@+id/tv_chat"
+        android:id="@+id/content"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="20dip"
@@ -20,7 +21,6 @@
         android:background="@drawable/chat_bg_cloud"
         android:maxEms="15"
         android:paddingBottom="5dip"
-
         android:paddingLeft="10dip"
         android:paddingRight="10dip"
         android:paddingTop="5dip"
