--- a/app/src/main/res/layout/im_right.xml
+++ b/app/src/main/res/layout/im_right.xml
@@ -6,7 +6,7 @@
     android:orientation="horizontal"
     android:gravity="right|center_vertical">
     <TextView
-        android:id="@+id/tv_chat"
+        android:id="@+id/content"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@drawable/chat_bg_user"
@@ -20,6 +20,7 @@
     android:maxEms="15"
         android:textColor="@android:color/white"/>
     <ImageView
+        android:id="@+id/icon"
         android:layout_width="50dip"
         android:layout_height="50dip"
         android:src="@drawable/user"
