--- a/app/src/main/res/layout/im_left.xml
+++ b/app/src/main/res/layout/im_left.xml
@@ -1,19 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:gravity="left|center_vertical"
     android:orientation="horizontal">
 
     <de.hdodenhof.circleimageview.CircleImageView
-        android:id="@+id/icon"
+        android:id="@+id/icon_left"
         android:layout_width="50dip"
         android:layout_height="50dip"
         android:layout_marginLeft="10dip"
         android:src="@drawable/assistant" />
 
     <TextView
-        android:id="@+id/content"
+        android:id="@+id/content_left"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="20dip"
